--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>구했소</title>
+    <title>it</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="home.css">
 </head>
