--- a/home.html
+++ b/home.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>it</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="home.css">
+    <meta charset="UTF-8" name = "viewport" content = "width = device-width, initial-scale = 1">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
-        <img src="img/logo.jpg" alt="Logo" class="logo">
+        <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div class="search-container">
-            <input type="text" class="search-input" placeholder="카테고리 검색">
+            <input type="text" class="search-input" placeholder="찾고 싶은 분야를 입력해주세요">
             <button class="search-button">
             <img src="img/search.png" alt="search-img" class="search-img">
         </button>
@@ -18,6 +19,11 @@
     </div>
 
     <div class="category-container"> <!--카테고리 버튼 7개-->
+        <!-- detail.html 로 이동하는 임시 버튼  -->
+        <a href="detail.html" class="category-button car-repair">
+            <img src="img/car-repair.png" alt="Button 1" class="button-img">
+            <span class="button-text">디테일 페이지 확인</span>
+        </a>
         <button class="category-button car-repair">
             <img src="img/car-repair.png" alt="Button 1" class="button-img">
             <span class="button-text">자동차 정비</span>
@@ -57,6 +63,6 @@
         <div class="banner-next-button banner-button">></div>
         <ul class="banner-pagination"></ul>
     </div>
-        <script src="home.js"></script>
+        <script src="js/home.js"></script>
     </body>
 </html>
