--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>it</title>
+    <title>구했소</title>
     <meta charset="UTF-8" name = "viewport" content = "width = device-width, initial-scale = 1">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/home.css">
@@ -10,20 +10,33 @@
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div class="search-container">
-            <input type="text" class="search-input" placeholder="찾고 싶은 분야를 입력해주세요">
+            <input type="text" class="search-input" placeholder="검색어를 입력하세요">
             <button class="search-button">
             <img src="img/search.png" alt="search-img" class="search-img">
         </button>
         </div>
-        <button class="login-button">로그인</button>
+        <button onclick="openPopup()" class="login-button">로그인</button>
+        <div id="popup" class="popup-overlay">
+            <div class="popup-content">
+                <span onclick="closePopup()" class="close-btn">&times;</span>
+                <h2>로그인</h2>
+                <form action="login">
+                    <input type="text" name="id" placeholder="아이디">
+                    <input type="password" name="pw" placeholder="비밀번호">
+                    <input type="submit" value="로그인">
+                </form>
+                <a href="signup.html" class="signup-button">회원가입</a>
+            </div>
+            </div>
     </div>
 
     <div class="category-container"> <!--카테고리 버튼 7개-->
-        <!-- detail.html 로 이동하는 임시 버튼  -->
+        <!-- detail.html 로 이동하는 임시 버튼  
         <a href="detail.html" class="category-button car-repair">
             <img src="img/car-repair.png" alt="Button 1" class="button-img">
             <span class="button-text">디테일 페이지 확인</span>
         </a>
+        -->
         <button class="category-button car-repair">
             <img src="img/car-repair.png" alt="Button 1" class="button-img">
             <span class="button-text">자동차 정비</span>
@@ -63,6 +76,8 @@
         <div class="banner-next-button banner-button">></div>
         <ul class="banner-pagination"></ul>
     </div>
+    <a href="detail.html"> -> 디테일 페이지로</a>
         <script src="js/home.js"></script>
+        <script src="js/global.js"></script>
     </body>
 </html>
