category, home 변경
버튼 마우스 오버 시 커서가 pointer로 바뀌도록 변경
카테고리 버튼 클릭 시 해당 카테고리로 이동
청소, 방역(clean) 카테고리 클릭 시 카테고리 목록 바뀜

--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
     <title>구했소</title>
     <meta charset="UTF-8" name="viewport" content="width = device-width, initial-scale = 1">
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/detail.css">
+    <link rel="stylesheet" href="css/category.css">
 </head>
 
 <body>
@@ -37,6 +37,31 @@
             <button onclick="logout()">로그아웃</button>
         </div>
     </div>
+    <div class=content-container>
+        <div class="category-container">
+            <h2>카테고리</h2>
+            <div class="category-list">
+                <h3 class="category-big">운동</h3>
+                <div class="category-small">
+                    <button class="exercise pilates">필라테스</button>
+                    <button class="exercise pt">PT</button>
+                    <button class="exercise yoga">요가</button>
+                    <button class="exercise health">헬스</button>
+                </div>
+                <h3 class="category-big">댄스, 뮤직</h3>
+                <div class="category-small">
+                    <button class="music dance">댄스</button>
+                    <button class="music vocal">보컬</button>
+                    <button class="music guitar">기타</button>
+                    <button class="music piano">피아노</button>
+                    <button class="music violin">바이올린</button>
+                    <button class="music drum">드럼</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/category.js"></script>
+    <script src="js/global.js"></script>
 </body>
 
 </html>
