--- a/public/category.html
+++ b/public/category.html
@@ -12,13 +12,15 @@
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div class="search-container">
-            <input type="text" class="search-input" placeholder="검색어를 입력하세요">
             <button class="search-button">
                 <img src="img/search.png" alt="search-img" class="search-img">
             </button>
+            <input type="text" class="search-input" placeholder="검색어를 입력하세요">
+
         </div>
         <div id=login>
             <button onclick="openPopup()" class="login-button">로그인</button>
+            <a href="signup.html" class="signup-button">회원가입</a>
         </div>
         <div id="popup" class="popup-overlay">
             <div class="popup-content">
@@ -29,13 +31,177 @@
                     <input type="password" name="pw" placeholder="비밀번호">
                     <input type="submit" value="로그인">
                 </form>
-                <a href="signup.html" class="signup-button">회원가입</a>
             </div>
         </div>
         <div id=logout>
-            <button onclick="goToProfile()">프로필 관리</button>
             <button onclick="logout()">로그아웃</button>
+            <button onclick="goToProfile()">마이페이지</button>
         </div>
+    </div>
+
+    <div id="menu">
+        <ul>
+            <li> <button onclick="openCategory()" id="Category"> 전체 카테고리 ▼</button></li>
+            <li> <button class="menu car">자동차 정비</button> </li>
+            <li> <button class="menu making">제작 의뢰</button></li>
+            <li> <button class="menu lesson">취미 레슨</button> </li>
+            <li><button class="menu interior">인테리어</button> </li>
+            <li> <button class="menu pet">돌보미</button> </li>
+            <li><button class="menu cleaning">청소 / 방역</button> </li>
+            <li><button class="menu sports">스포츠 용역</button> </li>
+        </ul>
+    </div>
+    <div id="submenu">
+        <ul>
+            <li id="service">
+                <ul>
+                    <li> 고객센터
+                        <ul>
+                            <li><button class="service notice">공지사항</button></li>
+                            <li><button class="service faq">FAQ</button></li>
+                            <li><button class="service event">이벤트</button></li>
+                            <li><button class="service tos">이용약관</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 부품교체
+                        <ul>
+                            <li><button class="car tire">타이어</button></li>
+                            <li><button class="car oil">오일</button></li>
+                            <li><button class="car filter">필터</button></li>
+                            <li><button class="car break">브레이크 패드</button></li>
+                        </ul>
+                    </li>
+                    <li> 자동차 검사
+                        <ul>
+                            <li><button class="car full-test">전체검사</button></li>
+                            <li><button class="car test">전체검사</button></li>
+                        </ul>
+                    </li>
+                    <li> 세차 및 도색
+                        <ul>
+                            <li><button class="car wash">세차</button></li>
+                            <li><button class="car paint">도색</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 디자인
+                        <ul>
+                            <li><button class="making card">명함</button></li>
+                            <li><button class="making leaflet">전단지</button></li>
+                            <li><button class="making menu">메뉴판</button></li>
+                            <li><button class="making banner">현수막</button></li>
+                        </ul>
+                    </li>
+                    <li> 핸드메이드
+                        <ul>
+                            <li><button class="making knitting">뜨개질</button></li>
+                            <li><button class="making jewel">쥬얼리</button></li>
+                            <li><button class="making print">3D 프린팅</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 운동
+                        <ul>
+                            <li><button class="lesson pilates">필라테스</button></li>
+                            <li><button class="lesson pt">PT</button></li>
+                            <li><button class="lesson yoga">요가</button></li>
+                            <li><button class="lesson crossfit">크로스핏</button></li>
+                        </ul>
+                    </li>
+                    <li> 음악
+                        <ul>
+
+                            <li><button class="lesson dance">댄스</button></li>
+                            <li><button class="lesson vocal">보컬</button></li>
+                            <li><button class="lesson instrument">악기연주</button></li>
+                        </ul>
+                    </li>
+                    <li> 그림
+                        <ul>
+                            <li><button class="lesson watercolor">수채화</button></li>
+                            <li><button class="lesson oilcolor">유화</button></li>
+                            <li><button class="lesson digital">디지털</button></li>
+                            <li><button class="lesson croquis">크로키</button></li>
+                            <li><button class="lesson calligraphy">서예</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 인테리어
+                        <ul>
+                            <li><button class="interior tile">필름, 타일 시공 </button></li>
+                            <li><button class="interior wallpaper">도배, 장판</button></li>
+                            <li><button class="interior light">조명</button></li>
+                            <li><button class="interior caulking">줄눈, 코킹</button></li>
+                            <li><button class="interior estimate">견적 상담</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 펫시터
+                        <ul>
+                            <li><button class="pet cat">탁묘, 탁견</button></li>
+                            <li><button class="pet visit">방문 돌봄</button></li>
+                            <li><button class="pet walk">산책</button></li>
+                            <li><button class="pet train">훈련</button></li>
+                        </ul>
+                    </li>
+                    <li> 미용
+                        <ul>
+                            <li><button class="pet visit-cut">방문 미용</button></li>
+                            <li><button class="pet cut">미용실</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 방문청소
+                        <ul>
+                            <li><button class="cleaning aircon">에어컨 청소</button></li>
+                            <li><button class="cleaning house">입주 청소</button></li>
+                            <li><button class="cleaning general">일반 청소</button></li>
+                            <li><button class="cleaning sewer">하수구 청소</button></li>
+                        </ul>
+                    </li>
+                    <li> 방역
+                        <ul>
+                            <li><button class="cleaning cockroach">바퀴벌레</button></li>
+                            <li><button class="cleaning ant">개미</button></li>
+                            <li><button class="cleaning bug">그 외</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li> 스포츠 용역
+                        <ul>
+                            <li><button class="sports soccer">축구</button></li>
+                            <li><button class="sports basketball">농구</button></li>
+                            <li><button class="sports baseball">야구</button></li>
+                            <li><button class="sports volleyball">배구</button></li>
+                            <li><button class="sports badminton">배드민턴</button></li>
+                            <li><button class="sports etc">기타</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
     <div class=content-container>
         <div class="category-container">
@@ -57,6 +223,24 @@
                     <button class="music violin">바이올린</button>
                     <button class="music drum">드럼</button>
                 </div>
+            </div>
+        </div>
+        <div class="list">
+            <!-- 샘플 항목 -->
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
             </div>
         </div>
     </div>
