--- a/public/category.html
+++ b/public/category.html
@@ -42,13 +42,13 @@
     <div id="menu">
         <ul>
             <li> <button onclick="openCategory()" id="Category"> 전체 카테고리 ▼</button></li>
-            <li> <button class="menu car">자동차 정비</button> </li>
+            <li> <button class="menu car-repair">자동차 정비</button> </li>
             <li> <button class="menu making">제작 의뢰</button></li>
             <li> <button class="menu lesson">취미 레슨</button> </li>
             <li><button class="menu interior">인테리어</button> </li>
-            <li> <button class="menu pet">돌보미</button> </li>
-            <li><button class="menu cleaning">청소 / 방역</button> </li>
-            <li><button class="menu sports">스포츠 용역</button> </li>
+            <li> <button class="menu dog">돌보미</button> </li>
+            <li><button class="menu clean">청소 / 방역</button> </li>
+            <li><button class="menu sport">스포츠 용역</button> </li>
         </ul>
     </div>
     <div id="submenu">
@@ -205,23 +205,27 @@
     </div>
     <div class=content-container>
         <div class="category-container">
-            <h2>카테고리</h2>
             <div class="category-list">
+                <h3>카테고리</h3>
                 <h3 class="category-big">운동</h3>
                 <div class="category-small">
+                    <!--
                     <button class="exercise pilates">필라테스</button>
                     <button class="exercise pt">PT</button>
                     <button class="exercise yoga">요가</button>
                     <button class="exercise health">헬스</button>
+                    -->
                 </div>
                 <h3 class="category-big">댄스, 뮤직</h3>
                 <div class="category-small">
+                    <!--
                     <button class="music dance">댄스</button>
                     <button class="music vocal">보컬</button>
                     <button class="music guitar">기타</button>
                     <button class="music piano">피아노</button>
                     <button class="music violin">바이올린</button>
                     <button class="music drum">드럼</button>
+                    -->
                 </div>
             </div>
         </div>
@@ -242,6 +246,37 @@
                 <p class="card-name">JJ정비소</p>
                 <h4 class="card-title">자동차 타이어 교체</h4>
             </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1">샘플 이미지</div>
+                <p class="card-name">JJ정비소</p>
+                <h4 class="card-title">자동차 타이어 교체</h4>
+            </div>
+            <!--여기까지 샘플-->
         </div>
     </div>
     <script src="js/category.js"></script>
