--- a/public/home.html
+++ b/public/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>구했소</title>
-    <meta charset="UTF-8" name = "viewport" content = "width = device-width, initial-scale = 1">
+    <meta charset="UTF-8" name="viewport" content="width = device-width, initial-scale = 1">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
@@ -83,16 +85,77 @@
             <span class="button-text">스포츠 용역</span>
         </button>
     </div>
-    
+
     <div class="top10"> <!--컨텐츠-->
         <h3> TOP 10 </h3>
         <h4> 이번주 인기 서비스를 확인해보세요 </h4>
 
         <div class="content-container">
-
+            <!-- 샘플 컨텐츠들 -->
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p> <!--대분류 | 소분류-->
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
+            <div class="content">
+                <img src="img/car-repair.png" alt="content-img">
+                <div class="content-text">
+                    <p> 자동차 정비 | 기본 검사 </p>
+                </div>
+            </div>
         </div>
     </div>
-        <script src="js/home.js"></script>
-        <script src="js/global.js"></script>
-    </body>
+    <script src="js/home.js"></script>
+    <script src="js/global.js"></script>
+</body>
+
 </html>
