--- a/public/category.html
+++ b/public/category.html
@@ -96,7 +96,7 @@
                             <li><button class="making card">명함</button></li>
                             <li><button class="making leaflet">전단지</button></li>
                             <li><button class="making menu">메뉴판</button></li>
-                            <li><button class="making banner">현수막</button></li>
+                            <li><button class="making advertise">현수막</button></li>
                         </ul>
                     </li>
                     <li> 핸드메이드
