--- a/public/detail.html
+++ b/public/detail.html
@@ -41,7 +41,7 @@
     <div id="menu">
         <ul>
             <li> <button onclick="openCategory()" id="Category"> 전체 카테고리 ▼</button></li>
-            <li> <button class="menu car">자동차 정비</button> </li>
+            <li> <button class="menu car-repair">자동차 정비</button> </li>
             <li> <button class="menu making">제작 의뢰</button></li>
             <li> <button class="menu lesson">취미 레슨</button> </li>
             <li><button class="menu interior">인테리어</button> </li>
@@ -95,7 +95,7 @@
                             <li><button class="making card">명함</button></li>
                             <li><button class="making leaflet">전단지</button></li>
                             <li><button class="making menu">메뉴판</button></li>
-                            <li><button class="making banner">현수막</button></li>
+                            <li><button class="making advertise">현수막</button></li>
                         </ul>
                     </li>
                     <li> 핸드메이드
