모바일 반응형, 이미지 수정
signup 모바일 추가
- 좌우 여백 조정
- 테두리 삭제

home 모바일 추가
- navbar 추가
- 메뉴바 레이아웃 수정
- svg로 선긋기

category 수정중

--- a/public/detail.html
+++ b/public/detail.html
@@ -33,7 +33,7 @@
         </div>
         <div id = logout>
             <button onclick="goToProfile()">프로필 관리</button>
-            <button onclick="logout()">로그아웃</button>
+            <button id="logout-button"onclick="logout()">로그아웃</button>
         </div>
     </div>
     <div class="detail-container">
