--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>구했소</title>
-    <meta charset="UTF-8">
+    
+    <meta charset="UTF-8" name="viewport" content="width = device-width, initial-scale = 1">
     <link rel="stylesheet" href="css/signup.css">
 </head>
 
