--- a/public/detail.html
+++ b/public/detail.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" href="css/category.css">
 </head>
-<body>
+<body class="body1">
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div class="search-container">
@@ -250,5 +250,26 @@
     </div>
     <script src="js/detail.js"></script>
     <script src="js/global.js"></script>
+</body>
+<body class="body2">
+    <div class="menu-container mobile">
+        <button class="mobile menu"> ☰ </button>
+    </div>
+    <div class="profile-container">
+        <div class="person-container">
+            <div class="person-img">전문가 사진</div>
+            <div class="person-title title"></div>
+            <div class="person-content content">
+                <ul>
+                    <br><h3>싸이</h3><br>
+                    <li><h4>전화번호</h4>010-1234-5678</li>
+                    <li><h4>이메일</h4>psy@naver.com</li>
+                    <li>🎶P-nation 대표(약력1)</li>
+                    <li>🎶싸이쇼 티켓 매진(약력2)</li>
+                    <li>🎶강남 스타일(약력3)</li>
+                    <li>🎶흠뻑쇼 대박(약력4)</li>
+                </ul>
+            </div>
+        </div>
 </body>
 </html>
