detail mobile 추가

--- a/public/detail.html
+++ b/public/detail.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" href="css/category.css">
 </head>
-<body class="body1">
+<body>
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div class="search-container">
@@ -229,18 +229,34 @@
         </div>
         <div class="profile-container">
             <div class="person-container">
+                <div class="like-profile">
                 <div class="person-img">전문가 사진</div>
-                <div class="person-title title"></div>
+                <div class="review-container-mobile">
+                    <button onclick="reviewm()" class="review-button-mobile">좋아요 <span id ="numberm">0<span></span>건 🤍</button>
+                </div>
+                </div>
                 <div class="person-content content">
                     <ul>
                         <br><h3>싸이</h3><br>
-                        <li><h4>전화번호</h4>010-1234-5678</li>
-                        <li><h4>이메일</h4>psy@naver.com</li>
-                        <li>🎶P-nation 대표(약력1)</li>
-                        <li>🎶싸이쇼 티켓 매진(약력2)</li>
-                        <li>🎶강남 스타일(약력3)</li>
-                        <li>🎶흠뻑쇼 대박(약력4)</li>
+                        <li><h4>전화번호</h4><h5>010-1234-5678</h5></li><br>
+                        <li><h4>이메일</h4><h5>psy@naver.com</h5></li><br>
+                        <li class="history1">🎶P-nation 대표(약력1)</li>
+                        <li class="history1">🎶싸이쇼 티켓 매진(약력2)</li>
+                        <li class="history1">🎶강남 스타일(약력3)</li>
+                        <li class="history1">🎶흠뻑쇼 대박(약력4)</li>
                     </ul>
+                </div>
+                <div class="explain-text-mobile">
+                    <div class="explain-content-mobile">
+                            <h2>만족도 높은 보컬 레슨</h2><br>
+                            1. 흔들림 없는 음정 훈련
+                            <br> --- <br> --- <br>
+                            2. 돌고래보다 높은 고음 훈련
+                            <br> --- <br> --- <br>
+                            3. 누구보다 빠른 랩 훈련
+                            <br> --- <br> --- <br>
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="review-container">
@@ -248,28 +264,60 @@
             </div>
         </div>
     </div>
+    <div class="navbar_overlay"></div>
+
+    <div class="navbar_burger">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+        </svg>
+    </div>
+    <div class="navbar_menu">
+        <hr>
+        <div class="big-category">
+            <button><br>카테고리</button>
+            <svg class="svg-category" xmlns="http://www.w3.org/2000/svg" width="24" height="12" viewBox="0 0 24 12">
+                <path d="M2 2 L12 10 L22 2" stroke="black" stroke-width="2" fill="none" />
+            </svg>
+        </div>
+
+        <div class="category-container-mobile">
+            <button class="category-button car-repair">
+                <span class="button-text">・ 자동차 정비</span>
+            </button>
+            <button class="category-button interior">
+                <span class="button-text">・ 인테리어</span>
+            </button>
+            <button class="category-button lesson">
+                <span class="button-text">・ 레슨</span>
+            </button>
+            <button class="category-button making">
+                <span class="button-text">・ 제작의뢰</span>
+            </button>
+            <button class="category-button dog">
+                <span class="button-text">・ 돌보미</span>
+            </button>
+            <button class="category-button clean">
+                <span class="button-text">・ 청소, 방역</span>
+            </button>
+            <button class="category-button sport">
+                <span class="button-text">・ 스포츠 용역</span>
+            </button>
+        </div>
+
+        <a href="home.html">공지사항</a>
+        <a href="home.html">FAQ</a>
+        <a href="home.html">이벤트</a>
+        <div class="navbar_burger_back">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x-lg"
+                viewBox="0 0 16 16">
+                <path
+                    d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
+            </svg>
+        </div>
+    </div>
     <script src="js/detail.js"></script>
     <script src="js/global.js"></script>
-</body>
-<body class="body2">
-    <div class="menu-container mobile">
-        <button class="mobile menu"> ☰ </button>
-    </div>
-    <div class="profile-container">
-        <div class="person-container">
-            <div class="person-img">전문가 사진</div>
-            <div class="person-title title"></div>
-            <div class="person-content content">
-                <ul>
-                    <br><h3>싸이</h3><br>
-                    <li><h4>전화번호</h4>010-1234-5678</li>
-                    <li><h4>이메일</h4>psy@naver.com</li>
-                    <li>🎶P-nation 대표(약력1)</li>
-                    <li>🎶싸이쇼 티켓 매진(약력2)</li>
-                    <li>🎶강남 스타일(약력3)</li>
-                    <li>🎶흠뻑쇼 대박(약력4)</li>
-                </ul>
-            </div>
-        </div>
 </body>
 </html>
