--- a/public/category.html
+++ b/public/category.html
@@ -293,7 +293,7 @@
     <div class="navbar_menu">
         <hr>
         <div class="big-category">
-            <button>카테고리</button>
+            <button><br>카테고리</button>
             <svg class="svg-category" xmlns="http://www.w3.org/2000/svg" width="24" height="12" viewBox="0 0 24 12">
                 <path d="M2 2 L12 10 L22 2" stroke="black" stroke-width="2" fill="none" />
             </svg>
