--- a/public/detail.html
+++ b/public/detail.html
@@ -259,8 +259,13 @@
                     </div>
                 </div>
             </div>
-            <div class="review-container">
-                <button onclick="review()" class="review-button">좋아요 <span id ="number">0<span></span>건 🤍</button>
+            <div class="review">
+                <div class="review-container">
+                    <button onclick="review()" class="review-button">좋아요 <span id ="number">0<span></span>건 🤍</button>
+                </div>
+                <div class="catalog">
+                    <button onclick="history.back()" class="catalog-button">목록</button>
+                </div>
             </div>
         </div>
     </div>
