카테고리 모바일 수정

--- a/public/category.html
+++ b/public/category.html
@@ -207,6 +207,7 @@
         <div class="category-container">
             <div class="category-list">
                 <h3>카테고리</h3>
+                <select></select>
                 <h3 class="category-big">운동</h3>
                 <div class="category-small">
                     <!--
