--- a/public/detail.html
+++ b/public/detail.html
@@ -205,11 +205,11 @@
     <div class="detail-container">
         <div class="explain-container">
             <div class="banner">
-                <div class="banner-item item1">활동 사진1</div>
-                <div class="banner-item item2">활동 사진2</div>
-                <div class="banner-item item3">활동 사진3</div>
-                <div class="banner-item item4">활동 사진4</div>
-                <div class="banner-item item5">활동 사진5</div>
+                <div class="banner-item item1"><img src="img/psy2.jpg" alt="psy" class="psy1" width=100% height=100%></div>
+                <div class="banner-item item2"><img src="img/psy3.jpg" alt="psy" class="psy3" width=100% height=100%></div>
+                <div class="banner-item item3"><img src="img/psy.jpg" alt="psy" class="psy3" width=100% height=100%></div>
+                <div class="banner-item item4"><img src="img/psy4.jpg" alt="psy" class="psy3" width=100% height=100%></div>
+                <div class="banner-item item5"><img src="img/psy5.jpg" alt="psy" class="psy3" width=100% height=100%></div>
                 <div class="banner-prev-button banner-button">◀</div>
                 <div class="banner-next-button banner-button">▶</div>
                 <ul class="banner-pagination"></ul>
@@ -230,7 +230,7 @@
         <div class="profile-container">
             <div class="person-container">
                 <div class="like-profile">
-                <div class="person-img">전문가 사진</div>
+                <div class="person-img"><img src="img/psyprofile.jpg" alt="psy" width=100% height=100%></div>
                 <div class="review-container-mobile">
                     <button onclick="reviewm()" class="review-button-mobile">좋아요 <span id ="numberm">0<span></span>건 🤍</button>
                 </div>
