--- a/public/home.html
+++ b/public/home.html
@@ -47,11 +47,11 @@
         </a>
         -->
         <div class="banner banner-container"> <!--신장개업 홍보 배너-->
-            <div class="banner-item item1">1</div>
-            <div class="banner-item item2">2</div>
-            <div class="banner-item item3">3</div>
-            <div class="banner-item item4">4</div>
-            <div class="banner-item item5">5</div>
+            <div class="banner-item item1"><img src="img/banner1.jpg" alt="banner1" class="banner1" width=100% height=100%></div>
+            <div class="banner-item item2"><img src="img/banner2.jpg" alt="banner2" class="banner2" width=100% height=100%></div>
+            <div class="banner-item item3"><img src="img/banner3.jpg" alt="banner3" class="banner3" width=100% height=100%></div>
+            <div class="banner-item item4"><img src="img/banner4.jpg" alt="banner4" class="banner4" width=100% height=100%></div>
+            <div class="banner-item item5"><img src="img/banner5.jpg" alt="banner5" class="banner5" width=100% height=100%></div>
             <div class="banner-prev-button banner-button">
                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6.79999 12.6001L1.19999 7.0001" stroke="white" stroke-width="2" stroke-linecap="round"/>
@@ -107,63 +107,63 @@
         <div class="content-container">
             <!-- 샘플 컨텐츠들 -->
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/car.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p> <!--대분류 | 소분류-->
+                    <a href="detail.html"> <br> 자동차 정비 | 기본 검사 </a> <!--대분류 | 소분류-->
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/ant.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 방역 | 개미 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/psy.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 취미 레슨 | 보컬 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/son.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 스포츠 용역 | 축구 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/car.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 자동차 정비 | 타이어 교체 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/dog.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 돌보미 | 탁견 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/jewely.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 제작 의뢰 | 보석 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/house.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 인테리어 | 견적 상담 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/house.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 인테리어 | 도배 </a>
                 </div>
             </div>
             <div class="content">
-                <img src="img/car-repair.png" alt="content-img">
+                <img src="img/aircon.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <p> 자동차 정비 | 기본 검사 </p>
+                    <a href="detail.html"> <br> 청소 | 에어컨 </a>
                 </div>
             </div>
             <!--샘플 끝-->
