마이페이지
게시글 관리
- 게시글 삭제 버튼 누르면 해당 div 삭제

프로필 수정
프로필 수정 시 수정하기 버튼 활성화

각 버튼 누르면 각각의 div 활성화 / 비활성화

--- a/public/category.html
+++ b/public/category.html
@@ -35,7 +35,7 @@
         </div>
         <div id=logout>
             <button id="logout-button" onclick="logout()">로그아웃</button>
-            <button onclick="goToProfile()">마이페이지</button>
+            <a href = "mypage.html">마이페이지</a>
         </div>
     </div>
 
