--- a/public/detail.html
+++ b/public/detail.html
@@ -33,8 +33,9 @@
             </div>
         </div>
         <div id = logout>
-            <button onclick="goToProfile()">프로필 관리</button>
+            
             <button id="logout-button"onclick="logout()">로그아웃</button>
+            <a href = "mypage.html">마이페이지</a>
         </div>
     </div>
 
