--- a/public/home.html
+++ b/public/home.html
@@ -35,7 +35,7 @@
         </div>
         <div id=logout>
             <button id="logout-button" onclick="logout()">로그아웃</button>
-            <button onclick="goToProfile()">마이페이지</button>
+            <a href = "mypage.html">마이페이지</a>
         </div>
     </div>
 
