--- a/public/mypage.html
+++ b/public/mypage.html
@@ -13,7 +13,6 @@
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div id=logout>
             <button class="addPost" onclick="addPost()">새 게시글 등록</button>
-            <a href = "mypage.html">마이페이지</a>
         </div>
     </div>
     <div class = "select-menu"> 
@@ -21,12 +20,12 @@
         <button class="modify-profile-button" onclick="modifyProfile()">프로필 수정</button>
         </div> 
     <div class = "post">
-        <h4>게시글 관리</h4>
+        <h4> 게시글 관리 </h4>
         <div class = "posts">
             <div class = "one-post">
-                <div class = post-image></div> 
-                <p> 예시 게시글 제목 </p>
-                <p> 예시 카테고리 </p>
+                <div class = "post-image"></div> 
+                <p class = "post-title"> 예시 게시글 제목 </p>
+                <p class = "post-category"> 예시 카테고리 </p>
                 <div class = "heart">
                 <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20 5.14552C20 2.30845 17.6522 0 14.7671 0C12.6496 0 10.8231 1.24294 9.99983 3.02475C9.17695 1.24294 7.35005 0 5.23358 0C2.3471 0 0 2.30845 0 5.14552C0 5.74399 0.104375 6.31795 0.296965 6.85286C0.515816 7.46192 0.847461 8.01801 1.26799 8.49764C1.44745 8.70287 1.64206 8.89353 1.85249 9.06863L9.83485 16.8635C9.88401 16.9119 9.94798 16.936 10.0126 16.936C10.0773 16.936 10.1423 16.9119 10.1917 16.8635L18.4704 8.77734L18.4697 8.77635C19.0064 8.24773 19.4269 7.60591 19.6906 6.88994C19.8906 6.3451 20 5.75756 20 5.14552Z" fill="#FF6C87"/>
