프로필 수정 모바일 적용

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -102,6 +102,7 @@
                     <input type="text" name="phone">
                     <p>이메일</p>
                     <input type="text" name="email">
+                    <div id="mobile-profile">
                     <p>경력</p>
                     <textarea name="introduce" cols="20" rows="5"
                         placeholder="입력예시&#10&#10Guhatso 대표(약력1)&#10동시 접속자 수 100만 달성(약력2)&#10IT 대회 수상(약력3)"></textarea>
@@ -127,7 +128,9 @@
                         <option value="GyeongsangS">경남</option>
                         <option value="Jeju">제주</option>
                     </select>
+                    
                     <input type="submit" value="수정하기">
+                    </div>
                 </div>
             </form>
         </div>
