category 이미지 추가

--- a/public/category.html
+++ b/public/category.html
@@ -233,49 +233,49 @@
         <div class="list">
             <!-- 샘플 항목 -->
             <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
+                <div class="sample-image item1"><img src="img/car.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">차차차 정비소</p>
+                <h4 class="card-title">타이어는 내가 최고</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/tire.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">세상에 이런 타이어</p>
+                <h4 class="card-title">타이어 즉시 교체</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/mis.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">미ㅅ린</p>
+                <h4 class="card-title">타이어 바꿔드려요~</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/muscle.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">근육맨</p>
+                <h4 class="card-title">근육으로 타이어</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/carcenter.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">이게 돼 카센터</p>
+                <h4 class="card-title">타이어 저만 믿어요!</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/mis.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">미ㅅ린</p>
+                <h4 class="card-title">이게 바로 타이어</h4>
+            </div>
+            <div class="Card">
+                <div class="sample-image item1"><img src="img/tire.jpg" width=100% height=100% alt="content-img"></div>
                 <p class="card-name">JJ정비소</p>
                 <h4 class="card-title">자동차 타이어 교체</h4>
             </div>
             <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
+                <div class="sample-image item1"><img src="img/carcenter.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">슈퍼카센터</p>
+                <h4 class="card-title">타이어 교체!!</h4>
             </div>
             <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
-            </div>
-            <div class="Card">
-                <div class="sample-image item1">샘플 이미지</div>
-                <p class="card-name">JJ정비소</p>
-                <h4 class="card-title">자동차 타이어 교체</h4>
+                <div class="sample-image item1"><img src="img/muscle.jpg" width=100% height=100% alt="content-img"></div>
+                <p class="card-name">강한남자</p>
+                <h4 class="card-title">타이어 내개로 오라~</h4>
             </div>
             <!--여기까지 샘플-->
         </div>
